syntax = "proto3";

package expense.v1;

option go_package = "github.com/jt-chihara/warikan/backend/proto/expense/v1;expensev1";

import "google/protobuf/timestamp.proto";

service ExpenseService {
  rpc CreateExpense(CreateExpenseRequest) returns (CreateExpenseResponse);
  rpc GetExpense(GetExpenseRequest) returns (GetExpenseResponse);
  rpc ListExpenses(ListExpensesRequest) returns (ListExpensesResponse);
  rpc UpdateExpense(UpdateExpenseRequest) returns (UpdateExpenseResponse);
  rpc DeleteExpense(DeleteExpenseRequest) returns (DeleteExpenseResponse);
}

message Expense {
  string id = 1;
  string group_id = 2;
  string title = 3;
  string description = 4;
  double amount = 5;
  string currency = 6;
  string paid_by_member_id = 7;
  repeated Split splits = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message Split {
  string member_id = 1;
  double amount = 2;
  double percentage = 3;
}

message CreateExpenseRequest {
  string group_id = 1;
  string title = 2;
  string description = 3;
  double amount = 4;
  string currency = 5;
  string paid_by_member_id = 6;
  repeated Split splits = 7;
}

message CreateExpenseResponse {
  Expense expense = 1;
}

message GetExpenseRequest {
  string id = 1;
}

message GetExpenseResponse {
  Expense expense = 1;
}

message ListExpensesRequest {
  string group_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListExpensesResponse {
  repeated Expense expenses = 1;
  string next_page_token = 2;
}

message UpdateExpenseRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  double amount = 4;
  string currency = 5;
  string paid_by_member_id = 6;
  repeated Split splits = 7;
}

message UpdateExpenseResponse {
  Expense expense = 1;
}

message DeleteExpenseRequest {
  string id = 1;
}

message DeleteExpenseResponse {
  bool success = 1;
}